# BookRecGoodReads

./: .dockerignore  .gitignore  AI_CONTEXT.md  CONTRIBUTING.md  Dockerfile  MODEL.md  Pipeline.ipynb  QUICK_START.md  README.md  app-requirements.txt  compare_recommenders.py  create_content_features.py  docker-compose.yml  evaluate.py  extract_metadata.py  hybrid_recommender.py  knn_recommender.py  knn_recommender_sparse.py  prepare_data.py  prepare_model_data.py  pyproject.toml  run_app.bat  run_app.sh  train_spotlight.py
.github/workflows/: ci.yml
app/: README.md  app.py  app_enhanced.py
docs/: DATA_QUALITY_ANALYSIS.md  EVALUATION.md
notebooks/: distributions.ipynb  training_evaluation.ipynb
scripts/: docker.sh  env.yml  prepare_data.sh  run_app.sh  setup.sh
scripts/install/: install.bat  install.sh
scripts/install/windows/: install.bat
src/: __init__.py  cf.py  compare_recommenders.py  create_content_features.py  downloader.py  evaluation.py  extract_metadata.py  hybrid_recommender.py  knn_recommender.py  knn_recommender_sparse.py  matching.py  prepare.py  prepare_model_data.py  serialize_data.py  train_spotlight.py
tests/: test_evaluate_hybrid.py  test_evaluation_metrics.py  test_evaluation_sampling.py  test_fuzzy_matching.py  test_prepare_data_filter.py
