[project]
name = "BookRecommender"
version = "0.1.0"
description = "Book Recommendations using UCSD Goodreads Data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastparquet~=2025.12.0",
    "fuzzywuzzy[speedup]~=0.18.0",
    "gdown~=5.2.0",
    "implicit~=0.7.2",
    "loguru~=0.7.3",
    "pandas~=2.3.3",
    "plotly~=6.5.0",
    "polars~=1.36",
    "pyarrow~=22.0.0",
    "matplotlib~=3.10.8",
    "seaborn~=0.13.2",
    "scipy~=1.15.3",
    "tqdm~=4.67",
    "scikit-learn~=1.7.2",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]  # isort import ordering on top of defaults

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # tolerate long parametrize lines in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "requires_data: integration test that needs the prepared data files in data/ (skip by default in CI)",
]

# Gradual typing: strict checks on the modules that ship with full
# annotations; the rest of the tree is excluded from the default run and
# can be brought up to standard incrementally.
[tool.mypy]
python_version = "3.10"
files = ["src/evaluation.py", "src/matching.py", "evaluate.py"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
app = [
    "streamlit>=1.52.2",
]
dev = [
    "black",
    "coverage>=7.13.0",
    "ipykernel",
    "jupyter",
    "mypy>=1.13.0",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
